--- a/task_1/Dockerfile
+++ b/task_1/Dockerfile
@@ -7,5 +7,5 @@ COPY requirements.txt .
 RUN . .venv/bin/activate && pip install -r requirements.txt
 
 # Run the application:
-COPY main.py .
-CMD . .venv/bin/activate && exec python main.py
+COPY User_interface.py .
+CMD . .venv/bin/activate && exec python User_interface.py
