--- a/task_1/requirements.txt
+++ b/task_1/requirements.txt
@@ -1,3 +1,23 @@
+appdirs==1.4.4
+astroid==2.5
 black==20.8b1
+click==8.1.2
+dill==0.3.4
 flake8==3.8.4
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.6.1
+mypy==0.942
+mypy-extensions==0.4.3
+numpy==1.22.3
+pathspec==0.9.0
+platformdirs==2.5.1
+pycodestyle==2.6.0
+pyflakes==2.2.0
 pylint==2.7.0
+regex==2022.3.15
+toml==0.10.2
+tomli==2.0.1
+typed-ast==1.5.2
+typing_extensions==4.1.1
+wrapt==1.12.1
