--- a/task_1/Dockerfile
+++ b/task_1/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9-slim-bullseye
 RUN python3 -m venv .venv
 
 # Install dependencies:
-COPY requirements.txt .
+COPY data/requirements.txt .
 RUN . .venv/bin/activate && pip install -r requirements.txt
 
 # Run the application:
