added new structure of serializer, added new gitignores

--- a/task_1/Dockerfile
+++ b/task_1/Dockerfile
@@ -7,5 +7,5 @@ COPY data/requirements.txt .
 RUN . .venv/bin/activate && pip install -r requirements.txt
 
 # Run the application:
-COPY User_interface.py .
-CMD . .venv/bin/activate && exec python User_interface.py
+COPY user_interface.py .
+CMD . .venv/bin/activate && exec python user_interface.py
