--- a/task_2/.gitignore
+++ b/task_2/.gitignore
@@ -318,3 +318,4 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,macos,pycharm
+!/data/demo.txt
